  Weiser.
* Changed EC_MAX_SII_SIZE to 4096.
* 'ethercat xml' creates valid XML <EtherCATInfoList> for more than one slave
  (thanks to E. Burgstaller).
* Module symbol versions file for ec_master.ko is installed to
  prefix/modules/ec_master.symvers.
* Added 'ethercat eoe' command to display Ethernet over EtherCAT statistics.

Changes in 1.4.0:

* Fixed race condition in jiffy-based frame timeout calculation.
* Fixed race condition concerning the ec_slave_config_state->operational flag.
* Fixed wrong calculation of the expected working counter if the process data
  of a domain span several datagrams.
* Fixed a kernel oops when a slave configuration is detached while the actual
  configuration is in progress.
* Fixed typo in logging output.
* Removed 'bashisms' from init script ('function' keyword).
* Fixed bug in e1000 drivers. Memory was allocated when sending the first
  frame.
* Modified licence headers to avoid conflicts with the GPL.
* Restricted licence to GPLv2 only.
* Fixed spelling of 'PDO', 'SDO' (all uppercase) and 'xx over EtherCAT'
  (without hyphens).

Changes in 1.4.0-rc3:

* Ported the master thread to the kthread interface.
* Added missing semaphore up() in an ioctl(). In rare cases, the master
  semaphore was not released.
* Minor fix in 'slaves' command that fixed duplicate display of supported
  mailbox protocols.
* The SDO Information Service is only queried, if the slave has the
  corresponding SII bit set.
* Added some missing header files in the command-line-tool code.
* Removed unstable e100, forcedeth, and r8169 drivers.

Changes in version 1.4.0-rc2:

* Fixed a deadlock causing race condition concerning thread signaling when the
  master thread had no opportunity to run, but shall be killed immediately
  after creation.
* Added missing up()s causing a semaphore being not released in some rare
  cases.
* Minor fixes.
* Removed some deprecated files.

Changes in version 1.4.0-rc1:

* Realtime interface changes: